--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,7 @@
 TODO:
 * add support for extended attributes
-** add support for extent-based stored attributes
-** check number of attributes that fit in a single block
 ** check v1 and v2 attributes
+** add support for reading remote attribute value blocks
 
 * complete basic format version 4 and 5 support
 ** complete libfsxfs_file_entry_get_sub_file_entry_by_utf8_name
