--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,13 @@
 TODO:
 * add support for extended attributes
 ** check v1 and v2 attributes
-** add support for reading remote attribute value blocks
+** add support for reading v5 remote attribute value data blocks
 
 * complete basic format version 4 and 5 support
 ** complete libfsxfs_file_entry_get_sub_file_entry_by_utf8_name
 ** complete libfsxfs_file_entry_get_sub_file_entry_by_utf16_name
+
+* for extended attributes by name look up use native XFS B+ tree structures
 
 * implement or remove libfsxfs_file_entry_is_empty from info_handle
 
