--- a/manuals/libfsxfs.3
+++ b/manuals/libfsxfs.3
@@ -1,4 +1,4 @@
-.Dd July 21, 2021
+.Dd July 27, 2021
 .Dt libfsxfs 3
 .Os libfsxfs
 .Sh NAME
@@ -128,6 +128,14 @@ File entry functions
 .Fn libfsxfs_file_entry_get_number_of_extended_attributes "libfsxfs_file_entry_t *file_entry" "int *number_of_extended_attributes" "libfsxfs_error_t **error"
 .Ft int
 .Fn libfsxfs_file_entry_get_extended_attribute_by_index "libfsxfs_file_entry_t *file_entry" "int extended_attribute_index" "libfsxfs_extended_attribute_t **extended_attribute" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_file_entry_has_extended_attribute_by_utf8_name "libfsxfs_file_entry_t *file_entry" "const uint8_t *utf8_string" "size_t utf8_string_length" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_file_entry_has_extended_attribute_by_utf16_name "libfsxfs_file_entry_t *file_entry" "const uint16_t *utf16_string" "size_t utf16_string_length" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_file_entry_get_extended_attribute_by_utf8_name "libfsxfs_file_entry_t *file_entry" "const uint8_t *utf8_string" "size_t utf8_string_length" "libfsxfs_extended_attribute_t **extended_attribute" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_file_entry_get_extended_attribute_by_utf16_name "libfsxfs_file_entry_t *file_entry" "const uint16_t *utf16_string" "size_t utf16_string_length" "libfsxfs_extended_attribute_t **extended_attribute" "libfsxfs_error_t **error"
 .Ft int
 .Fn libfsxfs_file_entry_get_number_of_sub_file_entries "libfsxfs_file_entry_t *file_entry" "int *number_of_sub_entries" "libfsxfs_error_t **error"
 .Ft int
