--- a/manuals/libfsxfs.3
+++ b/manuals/libfsxfs.3
@@ -1,9 +1,9 @@
-.Dd July 29, 2021
+.Dd September  6, 2021
 .Dt libfsxfs 3
 .Os libfsxfs
 .Sh NAME
 .Nm libfsxfs.h
-.Nd Library to support the SGI X File System (XFS) format
+.Nd Library to support the X File System (XFS) format
 .Sh SYNOPSIS
 .In libfsxfs.h
 .Pp
