--- a/manuals/libfsxfs.3
+++ b/manuals/libfsxfs.3
@@ -1,4 +1,4 @@
-.Dd September  6, 2021
+.Dd January 13, 2022
 .Dt libfsxfs 3
 .Os libfsxfs
 .Sh NAME
@@ -154,6 +154,10 @@ File entry functions
 .Fn libfsxfs_file_entry_get_offset "libfsxfs_file_entry_t *file_entry" "off64_t *offset" "libfsxfs_error_t **error"
 .Ft int
 .Fn libfsxfs_file_entry_get_size "libfsxfs_file_entry_t *file_entry" "size64_t *size" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_file_entry_get_number_of_extents "libfsxfs_file_entry_t *file_entry" "int *number_of_extents" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_file_entry_get_extent_by_index "libfsxfs_file_entry_t *file_entry" "int extent_index" "off64_t *extent_offset" "size64_t *extent_size" "uint32_t *extent_flags" "libfsxfs_error_t **error"
 .Pp
 Extended attribute functions
 .Ft int
