--- a/documentation/X File System (XFS).asciidoc
+++ b/documentation/X File System (XFS).asciidoc
@@ -31,7 +31,7 @@ for the libfsxfs project.
 == License
 
 ....
-Copyright (C) 2020-2021, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2020-2022, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the
 terms of the GNU Free Documentation License, Version 1.3 or any later version
 published by the Free Software Foundation; with no Invariant Sections, no
@@ -50,6 +50,7 @@ in the section entitled "GNU Free Documentation License".
 | 0.0.3 | J.B. Metz | April 2021 | Changes to formatting.
 | 0.0.4 | J.B. Metz | May 2021 | Clean up of some notes.
 | 0.0.5 | J.B. Metz | July 2021 | Additional information about extended attributes.
+| 0.0.5 6 J.B. Metz | May 2022 | Additional information about extended attributes.
 |===
 
 :numbered:
@@ -666,7 +667,8 @@ Contains number of nano seconds
 | 64 | 8 | | Number of (data) blocks
 | 72 | 4 | | Extent size
 | 76 | 4 | | Number of data extents
-| 80 | 2 | | Number of (extended) attributes extents
+| 80 | 2 | | Number of (extended) attributes extents +
+Can contain 0 if an attributes fork of type XFS_DINODE_FMT_EXTENTS is empty
 | 82 | 1 | | (Extended) attributes fork descriptor offset +
 Contains an offset (value x 8) relative to the end of the inode
 | 83 | 1 | | (Extended) attributes fork type
@@ -714,7 +716,8 @@ Contains number of nano seconds
 | 64 | 8 | | Number of (data) blocks
 | 72 | 4 | | Extent size
 | 76 | 4 | | Number of data extents
-| 80 | 2 | | Number of (extended) attributes extents
+| 80 | 2 | | Number of (extended) attributes extents +
+Can contain 0 if an attributes fork of type XFS_DINODE_FMT_EXTENTS is empty
 | 82 | 1 | | (Extended) attributes fork descriptor offset +
 Contains an offset (value x 8) relative to the end of the inode
 | 83 | 1 | | (Extended) attributes fork type
@@ -764,7 +767,8 @@ Contains number of nano seconds
 | 64 | 8 | | Number of (data) blocks
 | 72 | 4 | | Extent size
 | 76 | 4 | | Number of data extents
-| 80 | 2 | | Number of (extended) attributes extents
+| 80 | 2 | | Number of (extended) attributes extents +
+Can contain 0 if an attributes fork of type XFS_DINODE_FMT_EXTENTS is empty
 | 82 | 1 | | (Extended) attributes fork descriptor offset +
 Contains an offset (value x 8) relative to the end of the inode
 | 83 | 1 | | (Extended) attributes fork type
