--- a/manuals/libfsxfs.3
+++ b/manuals/libfsxfs.3
@@ -1,4 +1,4 @@
-.Dd July  7, 2022
+.Dd July 12, 2022
 .Dt libfsxfs 3
 .Os libfsxfs
 .Sh NAME
@@ -108,6 +108,8 @@ File entry functions
 .Fn libfsxfs_file_entry_get_owner_identifier "libfsxfs_file_entry_t *file_entry" "uint32_t *owner_identifier" "libfsxfs_error_t **error"
 .Ft int
 .Fn libfsxfs_file_entry_get_group_identifier "libfsxfs_file_entry_t *file_entry" "uint32_t *group_identifier" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_file_entry_get_device_identifier "libfsxfs_file_entry_t *file_entry" "uint32_t *device_identifier" "libfsxfs_error_t **error"
 .Ft int
 .Fn libfsxfs_file_entry_get_device_number "libfsxfs_file_entry_t *file_entry" "uint32_t *major_device_number" "uint32_t *minor_device_number" "libfsxfs_error_t **error"
 .Ft int
