--- a/manuals/libfsxfs.3
+++ b/manuals/libfsxfs.3
@@ -1,4 +1,4 @@
-.Dd July 28, 2022
+.Dd August 29, 2022
 .Dt libfsxfs 3
 .Os libfsxfs
 .Sh NAME
@@ -184,6 +184,10 @@ Extended attribute functions
 .Fn libfsxfs_extended_attribute_get_offset "libfsxfs_extended_attribute_t *extended_attribute" "off64_t *offset" "libfsxfs_error_t **error"
 .Ft int
 .Fn libfsxfs_extended_attribute_get_size "libfsxfs_extended_attribute_t *extended_attribute" "size64_t *size" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_extended_attribute_get_number_of_extents "libfsxfs_extended_attribute_t *extended_attribute" "int *number_of_extents" "libfsxfs_error_t **error"
+.Ft int
+.Fn libfsxfs_extended_attribute_get_extent_by_index "libfsxfs_extended_attribute_t *extended_attribute" "int extent_index" "off64_t *extent_offset" "size64_t *extent_size" "uint32_t *extent_flags" "libfsxfs_error_t **error"
 .Sh DESCRIPTION
 The
 .Fn libfsxfs_get_version
